<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.quiz.javi.quizapp.QuizActivity"
    android:orientation="vertical"
    android:background="@color/appBackgroudColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@drawable/quiz_app_logo"
            android:paddingTop="15dp"
            android:adjustViewBounds="true"
            android:maxHeight="150dp"
            android:maxWidth="150dp"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/attempsTextView"
            android:text="@string/attempted_questions"
            style="@style/AttemptsTextView"
            android:layout_alignParentRight="true"
            android:layout_above="@+id/correctAnswersTextView"/>

        <TextView
            android:id="@+id/correctAnswersTextView"
            android:text="@string/correct_answers"
            style="@style/CorrectTextView"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_weight="0.5"
        style="@style/QuestionTextView" />

    <Button
        android:id="@+id/buttonAnswer1"
        style="@style/ButtonAnswerView" />

    <Button
        android:id="@+id/buttonAnswer2"
        style="@style/ButtonAnswerView" />

    <Button
        android:id="@+id/buttonAnswer3"
        style="@style/ButtonAnswerView" />

    <Button
        android:id="@+id/submitButton"
        android:background="@drawable/submit_button_background"
        android:text="@string/submit_button"
        style="@style/ButtonSubmit"/>

    <Button
        android:id="@+id/nextQuestionButton"
        android:background="@drawable/next_button_background"
        android:text="@string/next_button"
        android:enabled="false"
        style="@style/ButtonSubmit"/>

</LinearLayout>
